# httpx-audit

./: .gitignore  LICENSE  Makefile  README.md  custom_client.py  docker-compose.debug.yml  docker-compose.yml  main.py  pyproject.toml  utils.py
app/: Dockerfile  app.py  custom_client.py  logger.py  main.py  requirements.txt  utils.py
app/clients/: json_placeholder.py
app/clients/utils/: uplink_httpx.py
clients/: json_placeholder.py
clients/utils/: uplink_httpx.py
otelcollector/: otelcol-config.yml
