[tool.poetry]
name = "httpx-audit"
version = "0.1.0"
description = ""
authors = ["ghandic <andrewchallis@hotmail.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.3"
pydantic = "^1.10.4"
jsonpath-ng = "^1.5.3"
uplink = "^0.9.7"
aiopath = "^0.6.11"
opentelemetry-instrumentation-httpx = "^0.36b0"
opentelemetry-instrumentation-fastapi = "^0.36b0"
uvicorn = "^0.20.0"
gunicorn = "^20.1.0"
fastapi = "^0.89.1"
opentelemetry-sdk = "^1.15.0"
opentelemetry-exporter-otlp-proto-http = "^1.15.0"
python-json-logger = "^2.0.4"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# More options here: https://black.readthedocs.io/en/stable/pyproject_toml.html
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# More options here: https://pycqa.github.io/isort/docs/configuration/options/
profile = "black"
src_paths = ["app"]
line_length = 120
